--- a/pyramidCodefestBackendSolution/src/main/resources/application.properties
+++ b/pyramidCodefestBackendSolution/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57InnoDBDialect
+spring.datasource.url=jdbc:mysql://recruitementdashboard.cy2epzzk38o0.ap-south-1.rds.amazonaws.com:3306/RecruitementDashboard
+spring.datasource.username=admin
+spring.datasource.password=adminadmin
